objects/ccrz__E_PromoI18n__c.object
<CustomObject>
    <description>Locale-specific version of promotion.</description>
    <fields>
        <fullName>ccrz__AttachmentId__c</fullName>
        <description>If ImageSource__c is an attachment, then this field holds the Salesforce ID of the attachment. Attachments could be different based on the locale and are defined in the CC Promo Screen.</description>
        <label>AttachmentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CC_Promotion__c</fullName>
        <description>Reference to the CC Promotion record that is being localized.</description>
        <inlineHelpText>Parent Promotion</inlineHelpText>
        <label>CC Promotion</label>
        <referenceTo>ccrz__E_Promo__c</referenceTo>
        <relationshipLabel>CC Promotions i18n</relationshipLabel>
        <relationshipName>CC_Promotions_i18n</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Description__c</fullName>
        <description>Description of the Promotion in the language referenced by the locale. (NOT CURRENTLY USED)</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__ExternalLink__c</fullName>
        <description>When set AND Link Type is set to URL on the CC Promo record, then clicking this promotion will redirect to the given URL.</description>
        <inlineHelpText>External Ink</inlineHelpText>
        <label>ExternalLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ImageSource__c</fullName>
        <description>One of Attachment, URI, Static Resource, Override Static Resource, Splash Static Resource, Splash Override Static Resource. Only Attachment, URI, and Static Resource are currently used. The ImageSource__c field indicates where to find the location of the image to be displayed for the promotion. If Attachment then the image is stored as an attachment to the object. If URI then use the ImageURI__c field. If StaticResource then use the ImageURI__c field but within the indicated Static Resource using the StaticResource__c field. Currently, ImageSource__c on the I18n record is overridden by the ImageSource__c on the CC Promo record.</description>
        <label>Image Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                    <default>true</default>
                    <label>Attachment</label>
                </value>
                <value>
                    <fullName>URI</fullName>
                </value>
                <value>
                    <fullName>Static Resource</fullName>
                </value>
                <value>
                    <fullName>Override Static Resource</fullName>
                </value>
                <value>
                    <fullName>Splash Static Resources</fullName>
                </value>
                <value>
                    <fullName>Splash Override Static Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ImageURI__c</fullName>
        <description>The URI of the image. If ImageSource__c is URI then this is the HREF pointing to the image. If ImageSource__c is Static Resource then this is a relative reference inside the indicated Static Resource.</description>
        <inlineHelpText>Image URI pointing to image hosted in external site</inlineHelpText>
        <label>ImageURI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>Locale that is being defined by this entry.</description>
        <inlineHelpText>Current user&apos;s locale such as en-US</inlineHelpText>
        <label>Locale</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__StaticResource__c</fullName>
        <description>The name of the Static Resource that the image is kept within if ImageSource__c is Static Resource.</description>
        <inlineHelpText>1. Use prefix &quot;c__&quot; for static resource defined in subscriber org
2. StaticResource without prefix refers to static resource inside managed package</inlineHelpText>
        <label>Static Resource</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>CC Promotion i18n</label>
    <nameField>
        <displayFormat>PROM-{0000}</displayFormat>
        <label>Promotion i18n Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Promotions i18n</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>